[gd_scene load_steps=5 format=3 uid="uid://c8y5r6xdj4p2v"]

[ext_resource type="Script" uid="uid://tvf6dyro8b4g" path="res://scripts/end_screen.gd" id="1_e4s2r"]
[ext_resource type="FontFile" uid="uid://dvq5mm7slk5bj" path="res://VCR_OSD_MONO_1.001.ttf" id="2_f3g7p"]
[ext_resource type="Texture2D" uid="uid://erq67mqkhkj3" path="res://GameScreen2_Title.png" id="3_k8p2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58mk3"]
bg_color = Color(0.687212, 0.687217, 0.687212, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.412152, 0.412152, 0.412152, 0.6)
shadow_size = 5
shadow_offset = Vector2(2.33, 2.935)

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4s2r")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResultSprite" type="TextureRect" parent="ResultContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("3_k8p2r")
expand_mode = 1
stretch_mode = 5

[node name="ResultLabel" type="Label" parent="ResultContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 48
text = "SUCCESS!"
horizontal_alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="ResultContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="ResultContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 32
text = "SCORE: 0"
horizontal_alignment = 1

[node name="MaxComboLabel" type="Label" parent="ResultContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 24
text = "MAX COMBO: 0"
horizontal_alignment = 1

[node name="SpiritLabel" type="Label" parent="ResultContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 24
text = "FINAL SPIRIT: 0%"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="ResultContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_58mk3")
text = "RETRY"

[node name="MainMenuButton" type="Button" parent="ResultContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_f3g7p")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_58mk3")
text = "MAIN MENU"

[connection signal="pressed" from="ResultContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ResultContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
